overflow fix

--- a/src/app/pages/calendar/components/add-recipy-to-calendar-modal/recipy-in-calendar-short-view/recipy-in-calendar-short-view.component.scss
+++ b/src/app/pages/calendar/components/add-recipy-to-calendar-modal/recipy-in-calendar-short-view/recipy-in-calendar-short-view.component.scss
@@ -48,6 +48,7 @@
   .ingrediends-block-wrapper, .steps-block-wrapper{
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
     
     font-size: 10px;
     .title {
